fix(gamesimulator): make weighted-draw maps order-stable across JVM runs
Map.copyOf and Map.of return ImmutableCollections.MapN, whose iteration
order is shuffled by a per-JVM random salt. Several sampling sites iterate
those maps in cumulative weighted draws (running += w; pick when running
>= threshold), so the same uniform draw picked different outcomes across
JVM invocations — producing a ~17% flake rate on TalentAxisSweepCalibrationTests
with bimodal (byte-identical-per-JVM) output.

Replaced the affected sites with Collections.unmodifiableMap(new
LinkedHashMap<>(...)) so iteration order is deterministic.

20/20 calibration runs green after the fix.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>